# aws-caller-id

./: Cargo.toml  README.md
src/: main.rs
