[package]
name = "aws-caller-id"
version = "0.1.0"
authors = ["Bruce Adams <bruce.adams@acm.org>"]
description = "Print AWS caller identity"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
aws-config = "1.0.0"
aws-types = "1.0.0"
aws-sdk-sts = "0.39.0"
tracing = "0.1.40"

[dependencies.tracing-subscriber]
features = ["env-filter"]
version = "0.3.18"

[dependencies.clap]
features = ["derive", "wrap_help"]
version = "4.4.8"

[dependencies.tokio]
version = "1.34.0"
features = ["macros", "rt-multi-thread"]
